# starlet

./: .gitignore  Cargo.toml  LICENSE  index.html  serve.py
assets/: style.css
crates/obj2rust/: Cargo.toml
crates/obj2rust/src/: main.rs
crates/starlet-client/: Cargo.toml
crates/starlet-client/src/: app.rs  game_loop.rs  lib.rs  net.rs  simulation.rs
crates/starlet-client/src/input/: abstraction.rs  mod.rs  mouse.rs  touch.rs
crates/starlet-client/src/renderer/: camera.rs  context.rs  hud.rs  mod.rs  particles.rs  shader.rs  ship.rs  ship_mesh.rs  starfield.rs
crates/starlet-client/src/renderer/shaders/: particle_frag.glsl  particle_vert.glsl  ship_frag.glsl  ship_vert.glsl  star_frag.glsl  star_vert.glsl
crates/starlet-server/: Cargo.toml
crates/starlet-server/src/: main.rs
crates/starlet-shared/: Cargo.toml  build.rs  protocol.capnp
crates/starlet-shared/src/: constants.rs  lib.rs  physics.rs  types.rs
