[package]
name = "starlet-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
starlet-shared = { path = "../starlet-shared" }
glam = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "MouseEvent",
    "WheelEvent",
    "DeviceOrientationEvent",
    "EventTarget",
    "Navigator",
    "Screen",
    "Performance",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "DomTokenList",
    "console",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
